# Easycode-infinite_Project

./: CODE_OF_CONDUCT.md  CONTIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: feedback.yml
ISSUE_TEMPLATE/: feedback.yml
easycode-infinite/: __init__.py  easycode_addons.py
