[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "easycode-infinite"
version = "1.0.6"
description = "A simple GUI addon for Pygame, Pyglet, and Arcade"
readme = "README.md"
requires-python = ">=3.7"

license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pygame-ce",
    "pyglet>=2.0",
    "arcade>=3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["easycode"]

[tool.hatch.build]
include = [
    "easycode/sounds/*.wav",
    "LICENSE"
]