[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "easycode-infinite"
version = "1.0.6"
description = "A simple GUI addon for Pygame, Pyglet, and Arcade"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pygame-ce",
    "pyglet>=2.0",
    "arcade>=3.0"
]

[project.urls]
Homepage = "https://github.com"
Documentation = "https://github.com/wiki"
Repository = "https://github.com"
Issues = "https://github.com/issues"

[tool.hatch.build.targets.wheel]
include = ["easycode_addons.py"]

[tool.hatch.build]
include = [
    "easycode_addons.py",
    "LICENSE",
    "README.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    "CONTRIBUTING.md"
]